WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190097
Skip debug assertion in ResourceLoadStatisticsMemoryStore::recursivelyGetAllDomainsThatHaveRedirectedToThisDomain()
https://bugs.webkit.org/show_bug.cgi?id=190097
Summary
Skip debug assertion in ResourceLoadStatisticsMemoryStore::recursivelyGetAllD...
John Wilander
Reported
2018-09-28 15:35:40 PDT
The change in
https://bugs.webkit.org/show_bug.cgi?id=190055
causes a re-classification that may trigger a debug assertion in ResourceLoadStatisticsMemoryStore::recursivelyGetAllDomainsThatHaveRedirectedToThisDomain(). We should skip the assertion for statistics model version 14.
Attachments
Patch
(2.28 KB, patch)
2018-09-28 15:40 PDT
,
John Wilander
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-09-28 15:36:14 PDT
<
rdar://problem/44877080
>
John Wilander
Comment 2
2018-09-28 15:40:26 PDT
Created
attachment 351127
[details]
Patch
John Wilander
Comment 3
2018-09-28 18:11:06 PDT
Comment on
attachment 351127
[details]
Patch Thanks, Chris! The iOS-sim bot seems to have unrelated issues.
WebKit Commit Bot
Comment 4
2018-09-28 18:36:34 PDT
Comment on
attachment 351127
[details]
Patch Clearing flags on attachment: 351127 Committed
r236630
: <
https://trac.webkit.org/changeset/236630
>
WebKit Commit Bot
Comment 5
2018-09-28 18:36:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug