Skip debug assertion in ResourceLoadStatisticsMemoryStore::recursivelyGetAllDomainsThatHaveRedirectedToThisDomain() https://bugs.webkit.org/show_bug.cgi?id=190097 <rdar://problem/44877080>

Reviewed by Chris Dumez.

The change in https://bugs.webkit.org/show_bug.cgi?id=190055 causes a
re-classification that may trigger a debug assertion in
ResourceLoadStatisticsMemoryStore::recursivelyGetAllDomainsThatHaveRedirectedToThisDomain().
We should skip the assertion for statistics model version 14 to avoid
this.

* UIProcess/ResourceLoadStatisticsMemoryStore.cpp:
(WebKit::ResourceLoadStatisticsMemoryStore::recursivelyGetAllDomainsThatHaveRedirectedToThisDomain const):


Canonical link: https://commits.webkit.org/205060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236630 268f45cc-cd09-0410-ab3c-d52691b4dbfc